re PR c++/56998 (ICE in value_dependent_expression_p, at cp/pt.c:19598)

PR c++/56998
	* semantics.c (potential_constant_expression_1): Make sure the
	called function is potentially constant.

From-SVN: r198882